--- a/css/application.css
+++ b/css/application.css
@@ -31,7 +31,8 @@ img {
   position: absolute;
   top: 0%;
   -webkit-transform: scale(1.2);
-  right: -25%; }
+  right: -25%;
+  pointer-events: none; }
 
 .sc-main--character + .sc-main--character {
   -webkit-transform: scale(1.2) rotateY(180deg);
@@ -51,7 +52,8 @@ img {
   position: absolute;
   bottom: 20%;
   text-align: center;
-  width: 100%; }
+  width: 100%;
+  z-index: 20; }
 
 .character--navbar {
   height: 65px;
